# Jumeau-num-rique

./: .gitignore  CMakeLists.txt  README.md  package.xml
dashboard/: LISEZ_MOI.txt  main.py  requirements.txt  ros3d_viewer.html  ros_connector.py
launch/: start_twin.launch
meshes/: README.md  base_link.stl  buse.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  pyrometer.stl
scripts/: dashboard_gui.py  data_processor.py  generate_meshes.py  mock_publisher.py
src/mon_robot_gazebo/: CMakeLists.txt  package.xml
src/mon_robot_gazebo/Com Socket/numericalTwins/: .outlining.json  init.pgx  numericalTwins.dtx  numericalTwins.pjx  start.pgx  tPosition.pgx  tRobot.pgx
src/mon_robot_gazebo/config/: robot_controllers.yaml
src/mon_robot_gazebo/launch/: display.launch.py  gazebo.launch.py
src/mon_robot_gazebo/readcsv/: replay_csv_ros.py  simulated_robot_data.csv
src/mon_robot_gazebo/scripts/: positions.json  robot_dance.py  robot_playback.py  staubli_live_bridge.py  staubli_receiver.py  twin_dashboard_node.py
src/mon_robot_gazebo/urdf/: robot.urdf
urdf/: robot_model.urdf  robot_model_with_meshes.urdf
